# aegis

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  BUGFIX_SUMMARY.md  CLEANUP_COMPLETE.md  Dockerfile  FIXES_APPLIED.md  HUGGINGFACE_INTEGRATION_SUMMARY.md  HUGGINGFACE_QUICKSTART.md  IMPLEMENTATION_STATUS.md  IMPORT_FIX_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MODELS_REFACTOR_SUMMARY.md  MODEL_REFACTOR_GUIDE.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  REQUIREMENTS.md  RESTART_REQUIRED.md  STATUS.md  UI_UPDATE_COMPLETE.md  app.py  clean_models.py  clear_database.py  docker-compose.yml  fix_imports.py  migrate_models_v2.py  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-minimal.txt  requirements-prod.txt  requirements.txt  test_gating_consensus.py  test_pipeline_executor.py  test_pipeline_schema.py  test_registry_v2.py  test_sse.py
aegis/: __init__.py  analyzer.py  config.py  config_loader.py  data_models.py  events.py  exports.py  prompt_builder.py  registry_v2.py  routes.py  runner.py  utils.py
aegis/adapters/: llm_adapter.py  ollama_adapter.py
aegis/api/: routes_credentials.py  routes_models.py
aegis/config/: models.yaml
aegis/connectors/: __init__.py  base.py  ollama_connector.py  openai_connector.py
aegis/consensus/: __init__.py  cascade.py  engine.py
aegis/data/: cwe_database.json
aegis/database/: __init__.py  repositories.py  schema.sql
aegis/models/: __init__.py  catalog.py  cost_tracker.py  credentials.py  engine.py  executor.py  parser_factory.py  provider_factory.py  rate_limiter.py  registry.py  runtime.py  runtime_manager.py  (+1 more)
config/: models-hf-classifiers.yaml  models.yaml
data/: cwe.json
requirements/: REQUIREMENTS.md  requirements-dev.txt  requirements-gpu.txt  requirements.txt
scripts/: migrate_to_v2.py  recompute_consensus.py  run_codeastra_gpu.py
test_project/: app.py
(+72 files in other folders)
